# AdventOfCode_2020

./: CMakeLists.txt  readme.md
day_01/: CMakeLists.txt  data.hpp  main.cpp
day_02/: readme.md
day_02/src/: is_password_correct.cpp  is_password_correct.hpp  split_input.cpp  split_input.hpp
day_02/test/: boss_monster_test.cpp  is_password_correct_test.cpp  split_input_test.cpp
day_03/: readme.md
day_03/src/: landscape.cpp  landscape.hpp  position.hpp  slope.hpp
day_03/test/: landscape_test.cpp
day_04/: CMakeLists.txt  readme.md
day_04/src/: passport.cpp  passport.hpp  passport_parser.cpp  passport_parser.hpp  passport_validator.cpp  passport_validator.hpp  splitstring.hpp
day_04/test/: boss_monster_test.cpp  parse_passport_test.cpp  passport_test.cpp  passport_validator_test.cpp  test_data.hpp
day_05/: CMakeLists.txt  readme.md
day_05/src/: implementation.cpp  implementation.hpp
day_05/test/: example_input.hpp  implementation_test.cpp
day_06/: CMakeLists.txt  readme.md
day_06/src/: count_all_answers.cpp  count_all_answers.hpp  count_answers_in_group.cpp  count_answers_in_group.hpp  split_input_into_groups.cpp  split_input_into_groups.hpp
day_06/test/: boss_monster_test.cpp  count_answers_in_group_test.cpp  split_input_into_groups_test.cpp
day_07/: CMakeLists.txt  readme.md
day_09/: CMakeLists.txt  readme.md
day_09/src/: implementation.cpp  implementation.hpp
day_09/test/: boss_monster_input.hpp  boss_monster_test.cpp  implementation_test.cpp
day_10/: CMakeLists.txt  readme.md
day_11/: CMakeLists.txt  readme.md
(+21 files in other folders)
